--- a/AspireAppHost/AspireAppHost.csproj
+++ b/AspireAppHost/AspireAppHost.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="13.0.0" />
     <PackageReference Include="Aspire.Hosting.MongoDB" Version="13.0.0" />
+    <PackageReference Include="Aspire.Hosting.Python" Version="13.0.0" />
   </ItemGroup>
 
 </Project>
