--- a/RustPaymentApi/Cargo.toml
+++ b/RustPaymentApi/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-actix-web = "4.11.0"
+actix-web = "4"
+opentelemetry = "0.25.0"
+opentelemetry-otlp = { version = "0.25.0", features = ["tonic"] }
+opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio-current-thread"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+tonic = "0.12"
