--- a/PythonUv/pyproject.toml
+++ b/PythonUv/pyproject.toml
@@ -9,4 +9,9 @@ dependencies = [
     "motor>=3.4.0",
     "python-dotenv>=1.0.1",
     "httpx>=0.27.2",
+    "opentelemetry-instrumentation-fastapi>=0.59b0",
+    "opentelemetry-instrumentation-httpx>=0.59b0",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
+    "opentelemetry-distro>=0.59b0",
+    "opentelemetry-instrumentation-pymongo>=0.59b0",
 ]
