--- a/AspireAppHost/AspireAppHost.csproj
+++ b/AspireAppHost/AspireAppHost.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Aspire.Hosting.AppHost" Version="13.0.0-preview.1.25558.3" />
     <PackageReference Include="Aspire.Hosting.MongoDB" Version="13.0.0-preview.1.25558.3" />
     <PackageReference Include="Aspire.Hosting.Python" Version="13.0.0-preview.1.25558.3" />
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Rust" Version="13.0.0-beta.431 " />
   </ItemGroup>
 
 </Project>
