--- a/AspireAppHost/AspireAppHost.csproj
+++ b/AspireAppHost/AspireAppHost.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="13.0.0-preview.1.25558.3" />
+    <PackageReference Include="Aspire.Hosting.JavaScript" Version="13.0.0-preview.1.25558.3" />
     <PackageReference Include="Aspire.Hosting.MongoDB" Version="13.0.0-preview.1.25558.3" />
     <PackageReference Include="Aspire.Hosting.Python" Version="13.0.0-preview.1.25558.3" />
     <PackageReference Include="CommunityToolkit.Aspire.Hosting.Rust" Version="13.0.0-beta.431 " />
