--- a/NuGet.config
+++ b/NuGet.config
@@ -8,6 +8,7 @@
   <packageSourceMapping>
     <packageSource key="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet9/nuget/v3/index.json">
       <package pattern="Aspire*" />
+      <package pattern="Microsoft.Extensions.ServiceDiscovery*" />
     </packageSource>
     <packageSource key="https://api.nuget.org/v3/index.json">
       <package pattern="*" />
